# rust-simple-api

./: .gitignore  Cargo.toml  README.md  docker-compose.yaml
src/: libs.rs  main.rs  users.rs
src/auth/: handler.rs  model.rs
src/auth/handler/: login_user.rs
src/libs/: token.rs
src/users/: handler.rs  model.rs  repository.rs
src/users/handler/: create_user.rs  delete_user.rs  edit_user.rs  get_user.rs  list_user.rs  util.rs
