[package]
name = "crud-api"
version = "0.1.0"
edition = "2021"

[dependencies]
postgres = "0.19"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"
governor = "0.6.3"
deadpool-postgres = "0.9"
log = "0.4.22"
env_logger = "0.11.5"
bcrypt = "0.15.1"
regex = "1.10.6"
